Actions
Bug #12601
closedadm1026: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointer:
../../sun4u/io/i2c/clients/adm1026.c: In function 'adm1026_do_attach': ../../sun4u/io/i2c/clients/adm1026.c:315: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f7c6b0310a1b1045e3e955e113031eb3c485707b
commit f7c6b0310a1b1045e3e955e113031eb3c485707b Author: Toomas Soome <tsoome@me.com> Date: 2020-05-09T15:39:38.000Z 12601 adm1026: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions